--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1221,4 +1221,5 @@
 	Organization = {Springer},
 	Pages = {399--414},
 	Title = {Bitter to better---how to make bitcoin a better currency},
-	Year = {2012}}
+	Year = {2012}
+}
