--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -55,6 +55,7 @@
 
 % = = = Other
 \usepackage{array}
+\usepackage{caption}
 \usepackage[usenames, dvipsnames]{color}
 \usepackage[hyphens]{url}
 \usepackage[pdftitle=Title,pdfauthor=Anonymous]{hyperref}
