--- a/paper/main.tex
+++ b/paper/main.tex
@@ -15,49 +15,50 @@
 \IEEEoverridecommandlockouts
 
 \begin{document}
-\title{SoK: Blockchain Technology and Its Applications}
+\title{SoK: Blockchain Technology and Its Potential Use Cases}
 %TODO: This needs to be anonymized when submitted.
 
 \author{
-	\IEEEauthorblockN{Scott Ruoti}
-	\IEEEauthorblockA{
-		University of Tennessee, Knoxville\\
-		MIT Lincoln Laboratory\\
-		\textit{ruoti@utk.edu}
-	} \\
-
-	\IEEEauthorblockN{Jeremy Clark}
-	\IEEEauthorblockA{
-		Concordia University\\
-		%\textit{}
-	}
-
-	\and
-	
-	\IEEEauthorblockN{Ben Kaiser}
-	\IEEEauthorblockA{
-		Princeton\\
-		MIT Lincoln Laboratory\\
-		\hspace{\baselineskip}%\textit{}
-	}\\
-
-	\IEEEauthorblockN{Robert Cunningham}
-	\IEEEauthorblockA{
-		Carnegie Mellon University\\
-		Software Engineering Institute\\
-		MIT Lincoln Laboratory\\
-		%\textit{}
-	}
-
-	
-	\and
-	
-	\IEEEauthorblockN{Arkady Yerukhimovich}
-	\IEEEauthorblockA{
-		George Washington University\\
-		MIT Lincoln Laboratory\\
-		%\textit{}
-	}
+	Anonymous
+%	\IEEEauthorblockN{Scott Ruoti}
+%	\IEEEauthorblockA{
+%		University of Tennessee, Knoxville\\
+%		MIT Lincoln Laboratory\\
+%		\textit{ruoti@utk.edu}
+%	} \\
+%
+%	\IEEEauthorblockN{Jeremy Clark}
+%	\IEEEauthorblockA{
+%		Concordia University\\
+%		%\textit{}
+%	}
+%
+%	\and
+%	
+%	\IEEEauthorblockN{Ben Kaiser}
+%	\IEEEauthorblockA{
+%		Princeton\\
+%		MIT Lincoln Laboratory\\
+%		\hspace{\baselineskip}%\textit{}
+%	}\\
+%
+%	\IEEEauthorblockN{Robert Cunningham}
+%	\IEEEauthorblockA{
+%		Carnegie Mellon University\\
+%		Software Engineering Institute\\
+%		MIT Lincoln Laboratory\\
+%		%\textit{}
+%	}
+%
+%	
+%	\and
+%	
+%	\IEEEauthorblockN{Arkady Yerukhimovich}
+%	\IEEEauthorblockA{
+%		George Washington University\\
+%		MIT Lincoln Laboratory\\
+%		%\textit{}
+%	}
 }
 
 \maketitle
@@ -85,8 +86,7 @@
 %\bibliographystyle{abbrv}
 %\bibliography{bib/bitcoin}
 \bibliographystyle{IEEEtran}
-\bibliography{IEEEabrv,bib/bitcoin}
-\nocite{*}
+\bibliography{bib/bitcoin}
 
 %====================================================================
 
