--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -3,7 +3,7 @@
 \section{Methodology}
 \label{sec:method}
 
-In this work, we sought to offer a high-level overview of Blockchain technology and its many possible uses.  To accomplish this, we considered the standard academic approach of surveying the available literature. During this process, it became clear that the majority of work exploring Blockchain's capabilities and use cases comes from industry.\footnote{Here, we consider industry broadly: corporations, small and medium business, startups, and consortia.}
+In this work, we sought to offer a high-level overview of Blockchain technology and its many possible uses.  To accomplish this, we considered the standard academic approach of surveying the available literature. During this process, it became clear that the majority of work exploring Blockchain's capabilities and use cases comes from non-academic sources. These sources were largely from the tech and financial industries.\footnote{Here, we consider industry broadly: corporations, small and medium business, startups, and consortia.}
 
 Materials produced by industry are sufficiently different from academic literature to make them difficult to use as sources in a traditional literature review.
 In particular, there are three main concerns when reviewing materials that originated from industry:
@@ -16,19 +16,21 @@ In particular, there are three main concerns when reviewing materials that origi
 	
 	\item \textbf{Inclusion of hype.}
 	Much of the material from industry includes visionary statements (i.e., hype) regarding how Blockchain technology will change business practices, power dynamics and the way the world works.
-	This hype is a mixture of realistic applications that can be built on top of Blockchain systems (e.g., anonymous payments~\cite{chaum1988untraceable}) and ideals that far transcend any technical solution (e.g., removing the need for governments).
+	This hype is a mixture of realistic use cases that can benefit from Blockchain technology (e.g., anonymous payments~\cite{chaum1988untraceable}) and ideals that far transcend any technical solution (e.g., removing the need for governments).
 	Unfortunately, unlike what one would expect in academic literature, the materials from industry often intermingle hype with technical details. This at least partially explains why some in academia are quick to dismiss sources from industry.
 	
 	\item \textbf{Researcher bias.}	
 	Researcher bias is an obvious problem in any literature review---regardless of whether the source is academia or industry---and one that is often not explicitly addressed in systemization papers.
-	The potential for bias is even stronger when reviewing materials from industry as academia's inherent caution when considering work from industry along with the two issues described above (i.e., lack of precise terminology, hype) make it easy to dismiss out of hand materials from industry.
-	Additionally, being aware of the academic pedigree of Blockchain technology can make it easy to overlook the interesting use cases enabled by the composition of existing primitives.
+	The potential for bias is even stronger when reviewing materials from industry as academia's inherent caution when considering work from industry.
+	Along with the two issues described above (i.e., lack of precise terminology, hype) it is easy for researchers to dismiss out of hand ideas proposed by industry.
+%	Additionally, being aware of the academic pedigree of Blockchain technology can make it easy to overlook the interesting use cases enabled by the composition of existing primitives.
 	
 \end{enumerate}
 
-For all three of these reasons, it is tempting to exclude industry materials from a review of the literature on Blockchain technology.
-However, we instead chose to look for a research methodology that would allow us to address these issues and still extract the underlying information discussed by industry.
-Ultimately, we settled on using a well established research method---\emph{grounded theory}~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
+For all three reasons, it is tempting to exclude industry materials from a review of the literature on Blockchain technology as previous work has often done.
+However, taking this approach sacrifices any possible insights that can be gained from the substantial effort that has been poured into Blockchain technology by industry.
+Instead we chose to look for a research methodology that would allow us to address these issues and still extract the underlying information discussed by industry.
+Ultimately, we settled on using a well established research method: \emph{grounded theory}~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
 
 Grounded theory is used to analyze qualitative data sources (e.g., user stories, interviews) and extract the underlying data and processes described across the myriad of gathered sources.\footnote{Grounded theory identifies data and processes that are supported across the body of sources and is not a method for creating a fine-grained breakdown of an individual document.}
 In particular, grounded theory is designed to help researchers identify data and processes within qualitative data sources generated by humans and filled with imprecise terminology and descriptions.
@@ -84,7 +86,7 @@ In particular, reviewers made sure to code the following four concepts found in 
 	\item \textbf{Properties.} What are the building blocks for Blockchain technology? What capabilities does it provide?
 	\item \textbf{Challenges.} What challenges must be addressed when building systems using Blockchain technology?
 	\item \textbf{Limitations.} What inherent limitations are there when using Blockchain technology?
-	\item \textbf{Use cases.} What use cases are suitable for Blockchain technology?
+	\item \textbf{Use cases.} What uses cases benefit from the application of Blockchain technology?
 \end{itemize}
 
 At this stage of the grounded theory process, reviewers were instructed to avoid evaluating the validity of the coded concepts.
@@ -106,7 +108,7 @@ These documents were all blog posts, representing the most up-to-date thinking o
 In this process, no new codes were discovered, indicating that our process had produced concepts that thoroughly describe Blockchain technology.
 
 \subsubsection{Stage 3---Selective Coding}
-In the third stage, two researchers transfered all of the concepts related to technical properties and use cases onto sticky-notes.
+In the third stage, two researchers transfered all of the concepts related to technical properties and applications onto sticky-notes.
 They then drew connecting lines between these concepts, describing how they related to one another.
 Based on these interconnections, concepts were divided into five different categories:
 
@@ -117,11 +119,11 @@ Based on these interconnections, concepts were divided into five different categ
 	\item \textbf{Capabilities (Figure~\ref{fig:Capabilities}).}
 	Capabilities are the high-level features provided by Blockchain technology's technical properties. Examples include automatic executions (i.e., smart contracts), internal auditability, and resilience.
 	
-	\item \textbf{Technical Primitives.}
+	\item \textbf{Technical primitives.}
 	Primitives are the building blocks used to construct the technical properties and capabilities of Blockchain technology. Examples include timestamps, hashchains, and peer-to-to-peer communication.
 	
 	\item \textbf{Use cases (Table~\ref{tab:usecase}).}
-	Use cases are classes of applications that the literature identified as being good fits for Blockchain technology. Examples include crytocurrencies, supply chain management, and identity management.
+	Use cases are classes of potential systems that the literature identified as being good fits for Blockchain technology. Examples include crytocurrencies, supply chain management, and identity management.
 	
 	\item \textbf{Normative properties (Figure~\ref{fig:normative-properties}).}
 	Normative properties represent what people hope to achieve using Blockchain technology. 
@@ -131,6 +133,7 @@ Based on these interconnections, concepts were divided into five different categ
 		
 \end{itemize}
 
+%TODO: Update with final counts for use cases.
 Our categorization resulted in 21 technical primitives, 14 technical properties, 12 normative properties, 13 capabilities, and 19 use cases.
 While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. 
 This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
@@ -158,7 +161,13 @@ Due to the nature of grounded theory, our analysis of the data represents one vi
 Different researchers coding the same data may have focused on different aspects leading to differences in categories, connections, and the theories they focused on.
 To address this limitation, we will make the documents we reviewed and our coding of those documents public.
 
-\subsection{Academic Literature Review}
-As part of the grounded theory analysis, the data revealed several open research challenges related to Blockchain technology.
-In regards to these challenges, we conducted a review of academic literature to identify what research has already been done and what the academic community thinks of these challenges.
-These challenges, along with the relevant paper references, are discussed in Section~\ref{sec:research-challenges}.
+\subsection{Research artifacts}
+Instead of citing each of the works evaluated as part of grounded theory analysis, we are instead making these papers available as a research artifact.
+This artifact includes the documents, codes and their associated references to the papers from stage 1 of the grounded theory analysis, and the collated concepts from stage 2 of the grounded theory analysis.
+This data is available at [redacted].
+
+%TODO: Add back in if this makes it into the main body of the paper. Even in the appendix this could be added back.
+%\subsection{Academic Literature Review}
+%As part of the grounded theory analysis, the data revealed several open research challenges related to Blockchain technology.
+%In regards to these challenges, we conducted a review of academic literature to identify what research has already been done and what the academic community thinks of these challenges.
+%These challenges, along with the relevant paper references, are discussed in Section~\ref{sec:research-challenges}.
